2007-01-26  Sascha L. Teichmann  <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/LayoutFrame.java:
		add a label in the south west with mouse coordinates in paper
		coordinate system.

2007-01-25  Sascha L. Teichmann  <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/ExtraData.java:
		fix a bug preventing maps from being removed.

	* src/de/intevation/printlayout/LayoutFrame.java:
		add ScaleUpdater as RemoveListener of scale text.

	* src/de/intevation/printlayout/ScaleUpdater.java:
		implements RemoveListener as well.
		remove ScaleUpdater as Listener from ChangeListener
		list of watched map.

2007-01-25  Sascha L. Teichmann  <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/DocumentManager.java:
		set scale text position initially to screen center.

2007-01-25  Sascha L. Teichmann  <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/DocumentManager.java:
		added markings to rulers.

2007-01-25  Ludwig Reiter  <ludwig.reiter@intevation.de>

	* src/de/intevation/printlayout/DocumentManager.java:
		added method generateRulers().TODO: add markings.

2007-01-25  Ludwig Reiter  <ludwig.reiter@intevation.de>
	
	added a about dialog.

	* src/de/intevation/printlayout/LayoutFrame.java:
		added InfoDialogAction and a help menu.

	* src/de/intevation/printlayout/InfoDialog.java:
		a about dialog. This dialog shows resources/info.html.
	
	* src/de/intevation/printlayout/i18n/messages.properties,
	  src/de/intevation/printlayout/i18n/messages_de.properties:
	  	Two new entries for the help dialog.
	
	* src/de/intevation/printlayout/resources/info.html:
		the about dialog message.

2007-01-25  Sascha L. Teichmann  <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/DocumentManager.java:
		new event system for not SVG data

	* src/de/intevation/printlayout/ExtraData.java:
		manages extra (not SVG data) and broadcasts events

	* src/de/intevation/printlayout/LayoutFrame.java:
		uses scale text.
